recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:6: error: '(' expected but '{' found.
  if {
     ^Tree:14: error: illegal start of simple expression
} 
^